otus-docker/k8s_homework1/service.yml
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
spec:
  selector:
    app: java-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
