otus-docker/k8s_homework1/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: java-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp($|/)(.*)
            backend:
              serviceName: java-app-service
              servicePort: 8000
